# waster

./: .gitignore  .gitmodules  Makefile.am  bt-listbox.c  bt-listbox.h  configure.ac  demo.c  imgur-proxy-call.h  imgur-proxy.c  imgur-proxy.h  main.c  meson.build  org.baedert.waster.gschema.xml  waster-album-view.c  waster-album-view.h  waster-image-loader.c  waster-image-loader.h  waster-image.c  waster-impostor.c  waster-impostor.h  waster-initial-state.c  waster-initial-state.h  waster-main-window.c  waster-main-window.h  waster-media.c  waster-media.h  waster.c  waster.gresources.xml  waster.h
data/: resources.xml
src/: CbAnimation.c  CbAnimation.h  gallery-manager.c  gallery-manager.h  imgur-gallery.c  imgur-gallery.h  imgur-proxy-call.c  imgur-proxy.h  main.c  waster-album-view.c  waster-album-view.h  waster-gallery.c  waster-gallery.h  waster-image-loader.c  waster-image-loader.h  waster-impostor.c  waster-impostor.h  waster-initial-state.c  waster-initial-state.h  waster-main-window.c  waster-main-window.h  waster-media.c  waster-media.h  waster-notification.c  waster-notification.h  waster-placeholder.c  waster-placeholder.h  waster.c  waster.h
src/rest/: oauth-proxy.c  oauth-proxy.h  oauth2-proxy-call.c  rest-proxy-call.c  rest-proxy-call.h
ui/: initial-state.ui  main-window.ui  style.css
